Fix header left position bc was off-centered

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -27,10 +27,12 @@ input {
 
 ul {
   list-style: none;
+  padding: 0px;
 }
 
 li a{
   text-decoration: none;
+  margin: 0px 10px;
 }
 
 .header, 
@@ -38,13 +40,11 @@ li a{
 .left-links,
 .footer {
   display: flex;
-  gap: 10px;
+
 }
 
-.header {
-  width: 500px;
-}
-
-.right-links{
-  justify-content: space-around;
+.header,
+.footer {
+  width: auto;
+  justify-content: space-between;
 }
